--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # History files
 .Rhistory
+.Rapp.history
 
 # Example code in package build process
 *-Ex.R
@@ -9,3 +10,4 @@
 
 # RStudio files
 .Rproj.user/
+
